--- a/TallerHTMLCSS.html
+++ b/TallerHTMLCSS.html
@@ -44,7 +44,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Planes Inversion</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -76,7 +76,7 @@
           <p>Definición de blockchain: Blockchain es un libro mayor compartido e inmutable que facilita el proceso de registro de transacciones y de seguimiento de activos en una red de negocios. Un activo puede ser tangible (una casa, un auto, dinero en efectivo, terrenos) o intangible (propiedad intelectual, patentes, derechos de autor, marcas). Prácticamente cualquier cosa de valor puede ser rastreada y comercializada en una red de blockchain, reduciendo el riesgo y los costos para todos los involucrados. </p>
         </div>
         <div class=" col-sm-12 col-md-6 bg-info">
-            <FONT COLOR="#CDCDCD">
+            <FONT COLOR="#98F6A9">
             <h1>Trinidad Blockchain</h1>
             <ul>
                 <li>Escalable</li>
