--- a/TallerHTMLCSS.html
+++ b/TallerHTMLCSS.html
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="row">  
-        <div class="col-12 bg-light">
+        <div class="col-sm-12 col-md-6 col-lg-6 bg-light">
             <h1> Boletin de criptonoticias</h1>
             <p id="parraf">Mantente informado con las ultimas noticias del mundo de bitcoin y las criptomonedas. </p>
             <ul>
@@ -93,6 +93,9 @@
               <li id="listanoticias">Mercados al dia, resumen semanal de las noticias del mercado</li>
               <li id="listanoticias">Top semanal de criptomonedas, los activos que mejor se comportaron en la semana</li>
             </ul>
+        </div>    
+
+          <div class="col-sm-12 col-md-6 col-lg-6 bg-light">
             <form>
               <div class="noticias">
 
@@ -124,7 +127,7 @@
                 <input type="submit" value="Guardar">
               </div>
             </form>
-        </div>
+          </div>
       </div>
     
     </div>
